  * Don't print duplicate warnings when importing pychecker
  * Fix other spurious warnings when importing pychecker
  * Fix bug for spurious invalid arguments when passing a dict inline
  * Add @option_file command line argument to read options from a file
  	(used on platforms which can't have too many options, ie Windows)
  * Fix several crashes

Version 0.8.11   - 06 June 2002
  * Improve error message for syntax errors from user files
  * Fix pychecker.bat so it should work now
  * Add a warning for using __coerce__ in new-style classes
  * Add --deprecated option for using deprecated modules or functions
  * Add a warning for using functions with security problems (os.t[e]mpnam)
  * Add a warning for comparing against True/False or defining True/False
  * Add --badexcept option to warn when using string exceptions or
        classes not derived from Exception to raise/catch exceptions
  * Fix spurious warnings from using (test and 'true' or 'false)

Version 0.8.10   - 20 March 2002
  * Add --unpack option to warn when unpacking a non-sequence
  * Add --unpacklen option to warn when unpacking sequence of wrong size
  * Add --changetypes option to warn when setting a variable to different types
  * Add --stringiter option to warn when iterating over a string
  * Add --input option to warn when using input()
  * Fix crash with checking properties or deriving from objects (2.2 only)
  * Fix crash with nested scopes and lambdas
  * Fix spurious warnings for constant conditionals when using ('%s' % value)
  * Fix spurious warnings for unused identifiers caused by from XXX import *
  * Add more information when module cannot be imported
  * Fix spurious warnings for implicit returns when using while 1:
  * Fix spurious warnings for implicit returns when using try/finally:
  * Fix spurious warning with globals that start w/__
  * Fix spurious warnings for modifying default arguments 
        when calling {}.get(), {}.has_key(), [].index(), [].count(), etc.